2007-12-04  Frank Lichtenheld  <djpig@debian.org>

	* scripts/Makefile.am (EXTRA_DIST): Add
	missing files from scripts/t/.

	* debian/rules: Call dh_installchangelogs
	and dh_installdocs for all packages instead
	of only for dpkg.
	* debian/dpkg-dev.docs: Symlink to dpkg.docs.
	* debian/dselect.docs: Likewise.
	* debian/dpkg-dev.preinst: Remove
	/usr/share/doc/dpkg-dev symlink on upgrade.
	* debian/dselect.preinst: Likewise.

2007-11-29  Frank Lichtenheld  <djpig@debian.org>

	* scripts/controllib.pl (parsecdata): Fix
	regex to determine the field name correctly
	if the field's value starts with a colon.

2007-11-29  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.13~.

2007-11-29  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.12.

2007-11-29  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-scanpackages.pl: Use Dpkg::Version.
	(vercmp): Use compare_versions instead of 'dpkg --compare-versions'.

2007-11-29  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-scanpackages.pl: Use Dpkg::ErrorHandling. Use error
	syserr and subprocerr instead of die and sprintf.
	(load_override): Likewise.

2007-11-29  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl: Unify parsing of Section and Priority
	fields with Homepage.
	(%spvalue, %spdefault): Remove unued variables.
	(spfileslistvalue): Use %f instead of %spvalue.

2007-11-29  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl (spfileslistvalue): Add prototype. Move
	to the top of the file with the other functions.

2007-11-29  Guillem Jover  <guillem@debian.org>

	* src/main.c (log_file): Move definition to ...
	* lib/dpkg-db.h: ... here.
	* src/configure.c (status_pipes): Remove extern definition.
	* src/errors.c (status_pipes): Likewise.
	* lib/tarfn.c (TarExtractor): Do not declare as extern.

2007-11-29  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (arbitrary_fields): Define as static.
	* lib/dbmodify.c (fnis): Likewise.