@@ -1,5 +1,9 @@
 2007-12-04  Frank Lichtenheld  <djpig@debian.org>
 
+	* scripts/Dpkg/ErrorHandling.pm (usageerr):
+	Support format strings like all the other
+	error reporting functions.
+
 	* scripts/Makefile.am (EXTRA_DIST): Add
 	missing files from scripts/t/.
 
